fix spacings and fix progress bar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,10 +203,12 @@ html, body {
 
 .navbar-nav.navbar-right {
     margin-right: 0;
+    background-color: transparent;
 }
 
 .navbar-nav > li + li > a {
     margin-left: 40px;
+    background-color: transparent;
 }
 
 .navbar-nav > li > a:hover,
@@ -390,6 +392,14 @@ html, body {
 
 .progress-bar {
     background-color:#3b6191;  
+    height: 16px;
+    padding: 120px 130px;
+}
+
+.progress-bar-100 {
+    background-color:#3b6191;  
+    height: 16px;
+    padding: 120px 170px;
 }
 
 
@@ -731,14 +741,13 @@ html, body {
 
 /* Caption text */
 .text {
-  color: black;
+  color: white;
   font-size: 20px;
   padding: 8px 12px;
   font-family: 'Open Sans', sans-serif;
   position: absolute;
-  bottom: 8px;
   width: 100%;
-  text-align: center;
+  margin-top: -50px;
 }
 
 .slideshow-container h3 {
@@ -749,12 +758,11 @@ html, body {
 /* Number text (1/3 etc) */
 .numbertext {
   color: #f2f2f2;
-  font-size: 12px;
+  font-size: 15px;
   font-family: 'Open Sans', sans-serif;
-  font-weight: 200px;;
+  font-weight: 300px;;
   padding: 8px 12px;
   position: absolute;
-  top: 0;
 }
 
 /* The dots/bullets/indicators */
@@ -763,6 +771,7 @@ html, body {
   height: 15px;
   width: 15px;
   margin: 0 2px;
+  margin-top: 20px;
   background-color: #bbb;
   border-radius: 50%;
   display: inline-block;
